# mvvm

./: Cargo.toml
src/: main.rs  models.rs  view.rs  viewmodel.rs
