[package]
name = "mvvm"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.0"
bson = "2.0"
image = "0.23.14"
winit = "0.25.0"
